[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finder_you"
version = "0.1.0"
description = "Home Assistant integration for Finder YOU YESLY roller shutters"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=custom_components.finder_you",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=100",
    "-q",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["custom_components/finder_you"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # let formatter handle line length
